<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities --> 
    <string name="app_name">Playmaker</string>
    <string name="title_activity_game">Create New Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_info">Game Details</string>
    
  	<!-- Create Game Activity --> 
  	<string name="create_game_touch_en">Press and hold a location on the map to create a new game.</string>
  	<string name="game_created_touch_en">Game created!</string>
    <string name="action_settings">Settings</string>
    <string name="action_newgame">New Game</string>
    <string name="location">Location:</string>
    <string name="locationHint">Latitude, Longitude</string>
    <string name="date">Date:</string>
    <string name="dateHint">08/12/14</string>
    <string name="gender">Gender:</string>
    <string name="time">Time:</string>
    <string name="timeHint">7:00pm</string>
    <string name="age">Age range:</string>
    <string name="minHint">Min</string>
    <string name="maxHint">Max</string>
    <string name="game_type">Game type:</string>
    <string name="pitch">Pitch:</string>
    <string name="skill_level">Skill level:</string>
    <string name="max_number">Max number of players:</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="turf">Turf</string>
    <string name="grass">Grass</string>
    <string name="futsal">Futsal</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="coed">Coed</string>
    <string name="to">to</string>
    
	<!-- Settings Activity --> 
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="default_address">Default location:</string>
    <string name="push">Push notifications:</string>
    <string name="reminders">Game reminders:</string>
    <string name="radius">Find games within:</string>
    <string name="miles">miles</string>
    <string name="milesHint">0</string>
    <string name="map">Map:</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="empty"></string>
    
    <!-- Info Activity --> 
    <string name="action_join">Join game</string>
    <string name="action_leave">Leave game</string>
    <string name="num_players">Players:</string>

</resources>
