<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android1:columnCount="1"
    android1:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android1:id="@+id/gender"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:text="@string/default_address"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/push"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/gender"
        android1:layout_marginTop="75dp"
        android1:text="@string/push"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/reminders"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/push"
        android1:text="@string/reminders"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/radius"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/reminders"
        android1:text="@string/radius"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/map"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/radius"
        android1:text="@string/map"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/miles"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/map"
        android1:layout_toRightOf="@+id/remindersSwitch"
        android:gravity="center"
        android1:text="@string/miles"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android1:id="@+id/defaultLocation"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/radioGameType"
        android1:layout_alignParentRight="true"
        android1:layout_alignTop="@+id/gender"
        android1:hint="@string/locationHint"
        android1:textAppearance="?android:attr/textAppearanceLarge"
        android1:ems="10"
        android1:inputType="textPostalAddress" />

    <Switch
        android1:id="@+id/pushSwitch"
        android1:layout_width="wrap_content"
        android1:layout_height="80dp"
        android1:layout_alignBaseline="@+id/push"
        android1:layout_alignBottom="@+id/push"
        android1:layout_alignLeft="@+id/defaultLocation"
        android1:text="@string/empty" />

    <Switch
        android1:id="@+id/remindersSwitch"
        android1:layout_width="wrap_content"
        android1:layout_height="80dp"
        android1:layout_alignBaseline="@+id/reminders"
        android1:layout_alignBottom="@+id/reminders"
        android1:layout_alignLeft="@+id/pushSwitch"
        android1:text="@string/empty" />

    <EditText
        android1:id="@+id/milesRadius"
        android1:layout_width="100dp"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/remindersSwitch"
        android1:layout_alignTop="@+id/miles"
        android1:hint="@string/milesHint"
        android1:gravity="center"
        android1:textAppearance="?android:attr/textAppearanceLarge"
        android1:ems="10"
        android1:inputType="number" />

    <RadioGroup
        android1:id="@+id/radioGameType"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentRight="true"
        android1:layout_alignTop="@+id/map"
        android1:orientation="horizontal" >

        <RadioButton
            android1:id="@+id/normalRadio"
            android1:layout_width="100dp"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/normal"
            android1:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android1:id="@+id/hybridRadio"
            android1:layout_width="100dp"
            android1:layout_height="wrap_content"
            android1:text="@string/hybrid"
            android1:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android1:id="@+id/satelliteRadio"
            android1:layout_width="100dp"
            android1:layout_height="wrap_content"
            android1:text="@string/satellite"
            android1:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

</RelativeLayout>