<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="10dp"
    android1:columnCount="1"
    android1:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android1:id="@+id/textView6"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android1:layout_alignParentLeft="true"
        android1:text="@string/address"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView6"
        android1:text="@string/date"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView1"
        android1:text="@string/time"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView2"
        android1:text="@string/gender"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView4"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView3"
        android1:text="@string/age"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView5"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView4"
        android1:text="@string/game_type"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView7"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView5"
        android1:text="@string/pitch"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView8"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView7"
        android1:text="@string/skill_level"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView9"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView8"
        android1:text="@string/max_number"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView10"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/minAge"
        android1:layout_alignLeft="@+id/femaleButton"
        android1:layout_alignRight="@+id/femaleButton"
        android1:gravity="center"
        android1:text="@string/to"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android1:id="@+id/skillLevelBar"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/maleButton"
        android1:layout_alignRight="@+id/futsalButton"
        android1:layout_alignTop="@+id/textView8" />

    <EditText
        android1:id="@+id/maxNum"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/futsalButton"
        android1:layout_alignRight="@+id/skillLevelBar"
        android1:layout_alignTop="@+id/textView9"
        android1:ems="10"
        android1:inputType="number" />

    <Button
        android1:id="@+id/grassButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/textView7"
        android1:layout_alignBottom="@+id/textView7"
        android1:layout_alignLeft="@+id/indoorButton"
        android1:text="@string/grass" />

    <EditText
        android1:id="@+id/locationText"
        android1:layout_width="100dp"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/dateText"
        android1:layout_alignParentRight="true"
        android1:layout_alignTop="@+id/textView6"
        android1:ems="10"
        android1:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android1:id="@+id/minAge"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/maleButton"
        android1:layout_alignTop="@+id/textView4"
        android1:layout_toLeftOf="@+id/textView10"
        android1:ems="10"
        android1:inputType="number" />

    <EditText
        android1:id="@+id/maxAge"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/textView10"
        android1:layout_alignLeft="@+id/coedButton"
        android1:layout_alignRight="@+id/coedButton"
        android1:ems="10"
        android1:inputType="number" />

    <Button
        android1:id="@+id/turfButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/grassButton"
        android1:layout_alignBottom="@+id/grassButton"
        android1:layout_toRightOf="@+id/grassButton"
        android1:text="@string/turf" />

    <Button
        android1:id="@+id/futsalButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/turfButton"
        android1:layout_alignBottom="@+id/turfButton"
        android1:layout_alignLeft="@+id/maxAge"
        android1:text="@string/futsal" />

    <Button
        android1:id="@+id/maleButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/textView3"
        android1:layout_alignBottom="@+id/textView3"
        android1:layout_toLeftOf="@+id/femaleButton"
        android1:text="@string/male" />

    <Button
        android1:id="@+id/femaleButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/maleButton"
        android1:layout_alignBottom="@+id/maleButton"
        android1:layout_toLeftOf="@+id/coedButton"
        android1:text="@string/female" />

    <Button
        android1:id="@+id/coedButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/femaleButton"
        android1:layout_alignBottom="@+id/femaleButton"
        android1:layout_alignParentRight="true"
        android1:text="@string/coed" />

    <Button
        android1:id="@+id/indoorButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/textView5"
        android1:layout_alignBottom="@+id/textView5"
        android1:layout_alignLeft="@+id/minAge"
        android1:text="@string/indoor" />

    <Button
        android1:id="@+id/outdoorButton"
        android1:layout_width="120dp"
        android1:layout_height="60dp"
        android1:layout_alignBaseline="@+id/indoorButton"
        android1:layout_alignBottom="@+id/indoorButton"
        android1:layout_toLeftOf="@+id/futsalButton"
        android1:text="@string/outdoor" />

    <EditText
        android1:id="@+id/timeText"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/maleButton"
        android1:layout_alignTop="@+id/textView2"
        android1:ems="10"
        android1:inputType="time" />

    <EditText
        android1:id="@+id/dateText"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/timeText"
        android1:layout_alignTop="@+id/textView1"
        android1:ems="10"
        android1:inputType="date" />

</RelativeLayout>